# stellar-omniwallet

./: .gitignore  package.json  pnpm-lock.yaml
contracts/: .env.example  Cargo.toml  justfile
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_token_auth.1.json
