[package]
name = "soroban-account-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "21.7.0" }

[dev-dependencies]
soroban-sdk = { version = "21.7.0", features = ["testutils"] }
dotenv = "0.15.0"
alloy = { version = "0.2.1", features = ["signers", "signer-local"] }
eyre = "0.6.12"
hex = "0.4.3"
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
tokio = { version = "1.39.3", features = ["full", "macros"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
